@@ -35,6 +35,7 @@ Config            ut_config;
 static ut_timer        *ttimer;
 static gchar           *timer_info, *countdown_info;
 static gboolean        *stopwatch = FALSE,
+                       *clock_mode = FALSE,
                        *show_limits = FALSE,
                        *show_version = FALSE;
 
@@ -69,6 +70,14 @@ static GOptionEntry entries[] = {
     NULL
   },
   
+  {"clock",
+    'k',
+    0,
+    G_OPTION_ARG_NONE,
+    &(clock_mode),
+    N_("show current time as a clock. Use 'Q' key to quit"),
+    NULL
+  },
   {"verbose",
     'v',
     0,
@@ -256,7 +265,8 @@ int main (int argc, char *argv[])
       || show_version
       || show_limits
       || countdown_info
-      || stopwatch))
+      || stopwatch
+      || clock_mode))
   {
     g_printerr (_("No option has been specified!\n"));
     g_printerr (_("Run '%s --help' to see a full list of available command\
@@ -270,12 +280,13 @@ int main (int argc, char *argv[])
   if (ut_config.debug)
     ut_config.quiet = FALSE;
   
-  if (timer_info && (countdown_info || stopwatch)
-    || countdown_info && stopwatch)
+  if (timer_info && (countdown_info || stopwatch || clock_mode)
+    || countdown_info && (stopwatch || clock_mode)
+    || stopwatch && clock_mode)
   {
     g_warning (_("Conflicting options!\nThe following options cannot\n\
  be used simultaneously:\n -t (timer mode), -c (countdown mode), -s\
- (stopwatch mode)."));
+ (stopwatch mode), -k (clock mode)."));
     exit (EXIT_FAILURE);
   }
   
@@ -350,8 +361,8 @@ int main (int argc, char *argv[])
   
   g_idle_add ((GSourceFunc) start_thread_exit_check, ttimer);
   
-  /* -------------- TIMER&COUNTDOWN MODE -------------- */
-  if (timer_info || countdown_info || stopwatch)
+  /* -------------- TIMER&COUNTDOWN&STOPWATCH&CLOCK MODE -------------- */
+  if (timer_info || countdown_info || stopwatch || clock_mode)
   {
     
     if (countdown_info)
@@ -366,6 +377,11 @@ int main (int argc, char *argv[])
       ttimer = timer_new_timer (0, 0, success_quitloop, error_quitloop, ut_config.timer);
       parse_time_pattern (timer_info, &(ttimer->seconds), &(ttimer->mseconds));
     }
+    else if (clock_mode)
+    {
+      g_debug ("Clock Mode");
+      ttimer = clock_new_timer (success_quitloop, error_quitloop, ut_config.timer);
+    }
     else
     {
       g_debug ("Stopwatch Mode");
@@ -377,7 +393,7 @@ int main (int argc, char *argv[])
     g_free (tmp);
     tmp = NULL;
     
-    if (!ut_config.quiet && ut_config.verbose && !stopwatch)
+    if (!ut_config.quiet && ut_config.verbose && !stopwatch && !clock_mode)
     {
       tmp = timer_ut_timer_to_string (ttimer);
       g_info (_("Timer will exit after reaching: %s"), tmp);
@@ -388,9 +404,9 @@ int main (int argc, char *argv[])
     ttimer->timer_print_source_id = g_timeout_add (TIMER_PRINT_RATE_MSEC,
                                                    (GSourceFunc) timer_print,
                                                    ttimer);
-    if (ttimer->mode != TIMER_MODE_STOPWATCH)
+    if (ttimer->mode != TIMER_MODE_STOPWATCH && ttimer->mode != TIMER_MODE_CLOCK)
       g_idle_add ((GSourceFunc) timer_run_checkloop_thread, ttimer);
-  } /* -------------- END TIMER&COUNTDOWN MODE -------------- */
+  } /* -------------- END TIMER&COUNTDOWN&STOPWATCH&CLOCK MODE -------------- */
   else
   { /* No mode selected! We quit the loop ASAP. */
     g_idle_add ((GSourceFunc) error_quitloop, NULL);
