@@ -42,17 +42,18 @@
 #include "log.h"
 
 #define SHORTDESCRIPTION _("command-line \"timer\" which features a timer,\
- a countdown and a stopwatch")
+ a countdown, a stopwatch and a clock")
 
 #define SUMMARY _(" µTimer (or \"utimer\", pronounced as \"micro-timer\") is a\
  multifunction timer (command-line only).\n\n The main features are:\n\
 \t- a timer (e.g. count from 0 to 4 minutes),\n\
 \t- a countdown (e.g. count from 10 minutes down to 0),\n\
-\t- a stopwatch.\
+\t- a stopwatch,\n\
+\t- a clock (shows current time).\
 \n\n µTimer always exits after\
  the timer or countdown are done counting. This can be useful\
- for using countdowns in scripts, for example. The stopwatch, which is not\
- concerned, needs to be stopped manually using 'q'.")
+ for using countdowns in scripts, for example. The stopwatch and clock, which are not\
+ concerned, need to be stopped manually using 'q'.")
 
 #define COPYRIGHT_TXT "License GPLv3+: GNU GPL version 3 or later\
  <http://gnu.org/licenses/gpl.html>\nThis is free software: you are free to\
